--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,7 @@ nav{
     height: 55px;
     backdrop-filter: blur(2px);
     box-sizing: border-box;
+    z-index: 10;
 }
 
 nav ul{
@@ -128,6 +129,51 @@ nav ul{
     margin: 0;
 }
 
+@media (max-width:600px){
+
+    h1{
+        font-size:3rem;
+    }
+
+    .hero-sub{
+        font-size:1.2rem;
+    }
+
+    nav ul{
+        display: none;
+    }
+
+    .hamburger{
+        display: flex;
+    }
+
+    nav{
+        justify-content: space-between;
+        padding: 0 1rem;
+        align-items: center;
+    }
+    
+    nav ul.active{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        position: absolute;
+        right: 0;
+        top: 39px;
+        gap: 0;
+        width: 100%;
+        background-color: #1b1a17b2;
+        padding: 0;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+    }
+
+    nav ul li{
+        margin: 16px 0 16px 0;
+    }
+
+}
+
 /************************************** FEATURES **************************************/
 
 #features{
@@ -159,15 +205,7 @@ nav ul{
 }
 
 @media (max-width:600px){
-    
-    h1{
-        font-size:3.5rem;
-    }
-
-    .hero-sub{
-        font-size:1.3rem;
-    }
-    
+        
     .features-tile{
         flex-direction: column;
         gap: 20px;
@@ -175,32 +213,6 @@ nav ul{
 
     #features img{
         width: 55%;
-    }
-
-    nav ul{
-        display: none;
-    }
-
-    .hamburger{
-        display: flex;
-    }
-
-    nav{
-        justify-content: space-between;
-        padding: 0 1rem;
-        align-items: center;
-    }
-    
-    nav ul.active{
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        position: absolute;
-        right: 0;
-        top: 39px;
-        gap: 0;
-        width: 300px;
-        border-bottom: 1px solid white ;
     }
  
 }
@@ -333,10 +345,26 @@ nav ul{
 }
 
 @media (max-width:600px){
+    
+    #location{
+        padding-top: 37px;
+        padding-bottom: 20px;
+    }
+
+
     .cards{
         display: flex;
         flex-direction: column;
         align-items: center;
+        gap: 40px;
+    }
+
+    .card1{
+        width: 300px;
+    }
+
+    .card-btn{
+        width: 300px;
     }
 }
 
@@ -361,6 +389,10 @@ nav ul{
 .review-container{
     display: flex;
     justify-content: center;
+}
+
+.review-container p{
+    font-size: 1rem;
 }
 
 .slides{
@@ -444,6 +476,14 @@ nav ul{
     text-align: center;
 }
 
+.socials a{
+    color:white;
+}
+
+.socials a:hover{
+    color: #FF8303;
+}
+
 .timing table{
     color: white;
     font-size: 14px;
@@ -454,8 +494,8 @@ nav ul{
     margin-bottom: 0;
     margin-top: 25px;
     margin-right: 35px;
-    color: whitesmoke;
-    font-size: 10px;
+    color:#A35709;
+    font-size: 12px;
 }
 
 
@@ -467,7 +507,14 @@ nav ul{
         text-align: center;
     }
 
-    .timing table{
+    .copyright p{
+        text-align: center;
+        margin: 25px 0 0 0;
     }
+
+    .timing table{
+        display: inline-block;
+    }
+
 }
 
