--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@
     src: url(./font/Expressa-Serial-Heavy.ttf);
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     margin: 0;
     font-family: 'Poppins'; 
@@ -164,8 +168,8 @@ nav ul{
         width: 100%;
         background-color: #1b1a17b2;
         padding: 0;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
     }
 
     nav ul li{
@@ -221,61 +225,44 @@ nav ul{
 
 #menu{
     background-color: #F0E3CA;
-    padding: 5% 10%;
-    text-align: center;
+    padding: 1rem;
+
+}
+
+.menu-main-div{
     display: flex;
+    flex: 1;
     justify-content: center;
 }
 
-.menu-img{
-    width: 25%;
+.img-food{
+    max-width: 18%;
+    padding: 1rem;
+    background-color: white;
+    box-shadow: -5px 5px 5px 0 rgb(29, 29, 29, 0.4);
 }
 
-.menu-item{
-    text-align: left;
-    margin-left: 100px;
-}
-
-.menu-item h3{
-    font-size: 2rem;
-    color: #FF8303;
-    margin-top: 0;
-}
-
-.menu-item h2{
-    margin: 0 auto;
-}
-
-.menu-item p{
-    line-height: 2.5;
-    display: inline-block;
-    margin-bottom: 0;
-    font-size: 1.3rem;
-}
-
-.menu-item span{
-    float: right;
-    line-height: 2.5;
-    margin-top: 20;
-    margin-left: 100px;
-    color: FF8303;
-    font-size: 1.3rem;
-
-}
-
-.menu-item em{
-    color:#8f8f8f ;
+.img-menu{
+    width: 40%;
+    padding: 1rem;
+    /* box-shadow: -5px 5px 5px 0 rgb(29, 29, 29, 0.4); */
+    filter: drop-shadow(-5px 5px 2px rgb(29, 29, 29, 0.4));
 }
 
 @media (max-width:600px){
     
-    .menu-item{
-        margin-left: 0;
+    #menu{
+        padding: 2.5rem 1rem;
     }
-    
-    .menu-img{
+
+    .img-food{
         display: none;
     }
+
+    .img-menu{
+        width: 90%;
+    }
+
 }
 
 /************************************** LOCATION **************************************/
@@ -294,23 +281,36 @@ nav ul{
 .card1 {
     width: 350px;
     background: white;
-    border-radius: 10px;
-    transition: border-radius 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    border-radius: 7px;
+    transition: all 100ms ease-in;
+    cursor: pointer;
+    overflow: hidden;
+}
+
+.card1 a{
+    box-sizing: border-box;
+    border: 0;
+    display: block;
+    color: #1a73e8;
+    font-size: 16px;
+    padding: 0.5rem 0;
+}
+
+.card1:hover a{
+    color: white;
+    background-color: #1a73e8;
 }
 
 .card1:hover{
     transform: scale(1.02);
 }
 
-.card1 img{
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
    
 .shadow {
-    box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
-                0 0  0 2px rgb(163, 163, 163),
-                0.3em 0.3em 1em rgb(102, 102, 102);
+    box-shadow: 0 0 5px rgb(29, 29, 29, 0.3)
+                /* inset 0 -3em 3em rgba(0,0,0,0.1), */
+                /* 0 0  0 2px rgb(163, 163, 163), */
+                /* 0.3em 0.3em 1em rgb(102, 102, 102); */
 }
 
 .card-text{
@@ -326,22 +326,6 @@ nav ul{
     font-size: 14;
     margin-top: 0;
     color: #8f8f8f;
-}
-
-.card-btn{
-    box-sizing: border-box;
-    border: 0;
-    color: #1a73e8;
-    font-size: 16px;
-    padding: 0.9em 1em;
-    width: 350px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-
-.card-btn:hover{
-    color: white;
-    background-color: #1a73e8;
 }
 
 @media (max-width:600px){
@@ -378,6 +362,7 @@ nav ul{
 .slideshow-head h2{
     font-size: 2em;
     margin-bottom: 0;
+    margin-top: 0;
 }
 
 .slideshow-head p{
@@ -418,14 +403,20 @@ nav ul{
 .customer{
     display: flex;
     justify-content: center;
+    align-items:center;
 }
 
 .customer img{
     width: 10%;
     border-radius: 100%;
+    margin-right: 8px;
 }
 
 @media (max-width:600px){
+    
+    #reviews{
+        padding-bottom: 10%;
+    }
     
     .review-container{
         display: flex;
@@ -480,8 +471,20 @@ nav ul{
     color:white;
 }
 
-.socials a:hover{
-    color: #FF8303;
+.socials a i{
+    margin: 0.25rem;
+}
+
+.zomato-logo:hover{
+    transform: scale(1.1);
+}
+
+.fa-square-facebook:hover{
+    color: var(--clr);
+}
+
+.fa-square-instagram:hover{
+    color: var(--clr);
 }
 
 .timing table{
